[gd_scene load_steps=3 format=3 uid="uid://d33lbbr5pcrcg"]

[ext_resource type="Script" path="res://UI/HUD.gd" id="1_uv43r"]
[ext_resource type="Theme" uid="uid://57f5meadx3qk" path="res://UI/main_theme.tres" id="2_w1oys"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uv43r")

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 72.0
offset_bottom = 46.0
theme = ExtResource("2_w1oys")
theme_override_font_sizes/font_size = 25
text = "Score: "

[node name="Health" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
theme = ExtResource("2_w1oys")
value = 70.0

[node name="Sanity" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 981.0
offset_top = 106.0
offset_right = 1033.0
offset_bottom = 132.0
theme = ExtResource("2_w1oys")
theme_override_font_sizes/font_size = 25
text = "Sanity:"

[node name="Inventory" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -160.0
offset_right = 80.0
offset_bottom = -100.0
grow_vertical = 0
theme = ExtResource("2_w1oys")
text = "Inv"

[node name="Pause" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = -20.0
grow_vertical = 0
theme = ExtResource("2_w1oys")
text = "Pause"

[node name="Actions" type="Label" parent="."]
layout_mode = 0
offset_left = 813.0
offset_top = 600.0
offset_right = 870.0
offset_bottom = 626.0
theme = ExtResource("2_w1oys")
text = "Actions"

[node name="Counter" type="Button" parent="."]
layout_mode = 0
offset_left = 1011.0
offset_top = 515.0
offset_right = 1131.0
offset_bottom = 565.0
theme = ExtResource("2_w1oys")
text = "Counter"

[connection signal="pressed" from="Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Counter" to="." method="_on_button_pressed"]
